--- a/Static/index.html
+++ b/Static/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clifton Adhikari | Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Clifton Adhikari</h1>
+        <div class="logo">Clifton Adhikari</div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -18,20 +19,25 @@
         </nav>
     </header>
 
+    <section id="hero">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Cybersecurity & IT Enthusiast | Passion for Secure Systems</p>
+    </section>
+
     <section id="about">
         <h2>About Me</h2>
-        <p>Cybersecurity and IT enthusiast with a passion for secure systems and software development.</p>
+        <p>A cybersecurity student at Wichita State University with a passion for IT security and system administration.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <p>Description of your project goes here.</p>
+            <p>A cybersecurity-related project you worked on.</p>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>Description of your project goes here.</p>
+            <p>Another project showcasing your skills.</p>
         </div>
     </section>
 
@@ -44,7 +50,5 @@
     <footer>
         <p>&copy; 2025 Clifton Adhikari</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
