--- a/Static/index.html
+++ b/Static/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clifton Adhikari | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="../static/style.css" />
 </head>
 <body>
     <header>
-        <div class="logo">Clifton Adhikari</div>
+        <div class="logo">Steve Anik Adhikari</div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -50,5 +49,6 @@
     <footer>
         <p>&copy; 2025 Clifton Adhikari</p>
     </footer>
+    <script src="../static/script.js"></script>
 </body>
 </html>
